...
  const [stories, setStories] = React.useState('');
  const [popupOpened, setPopupOpened] = React.useState(false);
  const [storySelected, setStorySelected] = React.useState('');

  const load = React.useCallback(async () => {
    navigation.setOptions({
      title: 'Customize your stories',
    });

    const storiesFromApi = await storyService.getUserStories(token);
    setStories(storiesFromApi);

    if (route.params !== undefined) {
...
